# agentic-workstation

./: .gitignore  CLI_REFERENCE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: CLI_REFERENCE.md  CLI_USAGE_GUIDE.md
src/agentic_workflow/: README.md  __init__.py  __main__.py  exceptions.py
src/agentic_workflow/cli/: CLI_ARCHITECTURE.md  __init__.py  config.py  display.py  formatting.py  main.py  theme.py  ui_utils.py  utils.py  workflow.sh
src/agentic_workflow/core/: __init__.py  config.py  config_service.py  exceptions.py  governance.py  governance_extraction.py  io.py  models.py  path_resolution.py  paths.py  project.py  project_generation.py  schema.py  session_manager.py
src/agentic_workflow/generation/: __init__.py  canonical_loader.py  denormalizer.py  generate_agents.py  generate_workflow_yaml.py  populate_frontmatter.py  update_index.py  yaml_writer.py
src/agentic_workflow/generators/: __init__.py  config.py  docs.py  index.py  pipeline.py  runtime.py  session.py  structure.py
src/agentic_workflow/ledger/: __init__.py  entry_builders.py  entry_reader.py  entry_writer.py  id_generator.py  log_write.py  section_ops.py
src/agentic_workflow/manifests/: MANIFEST_README.md  README.md  SCHEMA_CONSOLIDATION_PLAN.md  VALIDATION_ENHANCEMENT_GUIDE.md  __init__.py
src/agentic_workflow/resources/: defaults.toml
src/agentic_workflow/services/: __init__.py  agent_service.py  ledger_service.py  project_service.py  workflow_service.py
src/agentic_workflow/session/: __init__.py  end_session.py  gate_checker.py  init_project.py  invoke_agent.py  refresh_project.py  session_frontmatter.py  stage_manager.py  (+1 more)
(+168 files in other folders)
